Fix zoom on mobile nav hahahaha weller you suck

--- a/sass/components/styles.scss
+++ b/sass/components/styles.scss
@@ -11,13 +11,13 @@
   padding: 1em 1em 0;
   label {
     background-color: transparent;
-    width: 30%;
+    width: 32%;
     display: inline-block;
     box-sizing: border-box;
     select {
       -webkit-appearance: none;
       background: transparent;
-      font-size: 13px;
+      font-size: 16px;
       border: none;
       color: $color-brand;
       padding: 14px 12px 14px 20px;
@@ -33,9 +33,8 @@
     }
   }
   .relocate {
-    width: 36%;
+    width: 32%;
     span {
-      font-size: 13px;
       display: inline;
     }
   }
@@ -74,6 +73,7 @@
     left: 0;
     width: 100%;
     .container {
+      min-height: 52px;
       background: $color-brand;
       border-radius: 40px;
       margin: 0 2em;
